# verification-oracle

./: .clippy.toml  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  production-todo.org
.github/: CODEOWNERS
.github/workflows/: build_image  build_image.yml  rust.yml  verify.yml
config/: default.json  production.json  staging.json
interfaces/: Identity.json
src/: captcha.rs  config.rs  error.rs  main.rs  signer.rs  utils.rs  verification_provider.rs
