[package]
name = "gooddollar-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
axum = {version = "0.6.6", features = ["headers"]}
chrono = "0.4.23"
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "registry", "json"] }
tower-http = { version = "0.3.5", features = ["cors"] }
http = "0.2.8"
config = { version = "0.13.3", default_features = false, features = ["json"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
backtrace = "0.3"
hex = "0.4.3"
rand = "0.8.5"
once_cell = "1.17.1"
secp256k1 = { version = "0.26.0", features = ["global-context", "rand"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
web3 = "0.18.0"
ethereum-types = "0.14.1"
