[package]
name = "verification-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
axum = {version = "0.6.18", features = ["headers"]}
chrono = "0.4.25"
dotenv = "0.15.0"
tracing = "0.1.37"
tracing-appender = "0.2.2"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "registry", "json"] }
tower-http = { version = "0.4.0", features = ["cors"] }
config = { version = "0.13.3", default_features = false, features = ["json"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
backtrace = "0.3"
base64 = "0.21.0"
near-sdk = "4.1.1"
near-crypto = "0.16.1"
reqwest = { version = "0.11", features = ["rustls-tls", "json", "deflate"] }
thiserror = "1.0.40"
uuid = { version = "1.3.3", features = [ "v4", "fast-rng" ] }

[dev_dependencies]
assert_matches = "1.5.0"
